style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
  margin: 0;
  padding: 0;
  list-style: none;
  text-decoration: none;
  scroll-behavior: smooth;
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  color: var(--text-color);
  box-sizing: border-box;
}
:root{
  font-size: var(--font-size);
  --font-size:10px;
  --background-color:#fff;
  --primaryColor:#00305F;
  --text-color:rgba(100, 100, 100, 1);
  --icon-color:#000;
}
body{
  background-color: var(--background-color);
}
header,section{
  padding: 0 7.5%;
  width: 100%;
}
/* header */
.top{
  background: var(--primaryColor);
  height: 25px;
  width: 100%;
  position: relative;
}
.top_whiteLine{
  background-color: #fff;
  height: 5px;
  width: 100%;
  position: absolute;
  bottom: 5px;
}
header{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-top: 10px;
}
.navLinks ul{
  display: flex;
  gap: 35px;
}
.navLinks ul li a{
  color: var(--icon-color);
  font-size: 2rem;
  position: relative;
  cursor: pointer;
  font-weight: 600
}
.navLinks a::before{
  content: "";
  position: absolute;
  bottom: -2.5px;
  height: 2.5px;
  border-radius: 50px;
  width: 0;
  background: var(--primaryColor);
}
.navLinks a:hover::before{
  width: 100%;
}
#menuBtn{
  display: none;
  background-color: transparent;
  animation: scaling 3s infinite;
  font-size: 3.3rem;
  color: var(--icon-color);
}
@keyframes scaling {
  from{
    transform: scale(1);
  }
  to{
    transform: scale(1.5);
  }
}
@media screen and (max-width:1200px) {
  .navLinks{
    padding: auto;
    display: flex;
    z-index: 10;
    background-color: var(--primaryColor);
    position: absolute;
    top: 150px;
    width: 80%;
    height: 75vh;
    text-align: center;
    justify-content: center;
    align-items: center;
    display: none;
  }
  #menuBtn{
    display: block;
      cursor: pointer;
    }
    .navLinks ul{
      flex-direction: column;
    }
    .navLinks ul li a{
      color: #fff;
      font-size: 3.3rem;
    }
    .menu_active{
      display: flex;
    }
  }

/* hero section */
.hero{
display: grid;
grid-template-columns: 60% 40%;
height: 75vh;
}
.hero .heroText{
  display: flex;
  flex-direction: column;
  padding-top: 150px;
}
.greet{
  font-size: 2.5rem;
}
.typewriter {
  font-size: 3.3rem;
  height: auto;
  min-height: 100px;
  margin-bottom: 10px;
  color: var(--icon-color);
}
.mySocials ul li{
  display: flex;
  gap: 25px;
}
.mySocials ul li a i{
  font-size: 5rem;
  border-radius: 50px;
  margin: 10px 0;
  padding: 10px;
  color: var(--icon-color);
}
.mySocials ul li a i:hover{
  background: var(--primaryColor);
  color: #fff;
}
.heroImg img{
  height: 400px;
  width: 100%;
  background-color: var(--primaryColor);
  border-radius: 50%;
  border: var(--background-color) 5px dashed;
}
.heroImg{
  padding: 10%;
}
.heroBtn{
  display: flex;
  gap: 25px;
  margin: 10px 0 0 0;
}
.heroBtn a{
  color: var(--primaryColor);
  text-decoration: underline;
  font-size: 2.5rem;
}
.downloadCV{
  background: var(--primaryColor);
  border: none;
  border-radius: 10px;
  padding: 10px;
  text-align: center;
}
.downloadCV a{
  font-size: 1.5rem;
  color: #fff;
  font-weight: 500;
  text-decoration: none;
}
@media screen and (max-width:1200px){
  :root{
    --font-size: 9px;
  }
  .hero{
    display: flex;
    flex-direction: column;
  gap: 25px;
  height: auto !important;
}
.heroImg img{
  height: 300px;
}
}


/* about section */
.about{
  display: grid;
  grid-template-columns: 40% 50%;
  padding-bottom: 50px;
  height: auto;
  justify-content: space-between;
  margin-top: 100px; 
}
.about-Box1{
  height: 100%;
}
fieldset {
  border: 5px dashed var(--icon-color);
  padding: 10px;
  border-top-left-radius:25px;
}
fieldset ul{
  display: flex;
  flex-direction: column;
  gap: 25px;
}
fieldset ul li i{
  font-size: 4rem;
  color: var(--icon-color);
} 
.NepalFlag{
  height: 3rem;
}
fieldset ul li{
  display: flex;
  gap: 25px;
  font-size: 2rem;
  font-weight: 500;
  color: rgba(100, 100, 100, 1);
}
.about-Box2{
  display: flex;
  flex-direction: column;
}
.headingText{
  font-size: 5rem;
  color: var(--icon-color);
}
.transparentText{
  font-size: 5rem;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-width: 1px;
  color: var(--text-color);
}
.primaryColor{
  color: var(--primaryColor);
  font-size: 5rem;
}
.explanation{ 
  font-size: 2rem;
  text-align: justify;
  font-weight: 500;
  color: rgba(100, 100, 100, 1);
  margin-top: 25px;
}
.hireBtn{
  background: var(--primaryColor);
  border: none;
  padding: 10px;
  border-radius: 10px;
  margin-top: 25px;
  width: 100px;
  cursor: pointer;
}
.hireBtn a{
  color: #fff;
  font-size: 2rem;
}

@media screen and (max-width:1200px) {
  .about{
    display: flex;
    flex-direction: column;
    gap: 100px;
    
  }
  fieldset legend{
    text-align: center;
  }
}
/* testimonials section */
.testimonials{
  margin: 100px 0 100px 0;
}
.testimonialHeading{
  display: flex;
  justify-content: center;
  align-items: center;
}
.testimonialTitle{
  font-size: 3.3rem;
  color: var(--primaryColor);
}
.testimonialHeading{
  display: flex;
  flex-direction: column;
}
.clientTestimonials{
  margin-top: 25px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 50px;
  flex-wrap: wrap;
}
.clientTestimonial{
  display: flex;
  width: 400px;
  box-shadow: 2.5px 2.5px 2.5px 2.5px rgba(100, 100, 100, 1);
  border-top-left-radius: 25px;
  border-bottom-left-radius: 25px;
}
.clientImg{
  padding: 25px;
  position: relative;
  margin-left: -50px;
}
.clientImg img{
  height: 197px;
  width: 120px;
  border-top-left-radius: 25px;
  border-bottom-left-radius: 25px;
  background-color: var(--primaryColor);
}
.clientTestimonialComment{
  display: flex;
  flex-direction: column;
}
.quote i{
  font-size: 5rem;
  color: rgba(254, 109, 52, 1);
}
.comment , .client{
  padding: 10px;
}
.comment{
  font-size: 1.5rem;
  text-align: justify;
  color: rgba(100, 100, 100, 1);
}
.clientName{
  font-size: 2rem;
  color: var(--primaryColor);
}
.clientPost{
  font-size: 1.5rem;
  color: rgba(100, 100, 100, 1);
}

@media screen and (max-width:1200px) {  
  .testimonials .primaryColor{
    font-size: 3.3rem;
  }
  .testimonials .transparentText{
    font-size: 3.3rem;
  }
  .testimonials .testimonialHeading .headingText{
    font-size: 3.3rem;
  }
  .comment{
    font-size: 1.2rem;
  }
  .clientTestimonial{
    width: 300px;
  }
}
/* mySkills section */
.mySkills{
  display: flex;
  flex-direction: column;
  gap: 50px;
}
.mySkillsTitle p{
  font-size: 3.3rem;
  color: var(--primaryColor);
}
.skills ul{
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.mySkills ul li{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  color: var(--icon-color);
}
.skills ul li i{
  font-size: 10rem;
  color: var(--icon-color);
}
/* projects section */
.projects{
display: flex;
flex-direction: column;
margin-top: 100px;
}
.allProjects{
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 100px;
}
.projectsTitle{
  font-size: 3.3rem;
  color: var(--primaryColor);
}
.projects-Box1, .projects-Box2{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.projects-Box1 div{
  margin-top: 50px;
}
.project{
  position: relative;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  border: 5px solid black;
  border-top-left-radius: 25px;
  border-bottom-left-radius: 25px;
}
.project img{
  width: 100%;
  height: 100%;
}
.overlay p{
  font-size: 3.5rem;
  color: #fff;
}
.overlay p i{
  font-size: 2rem;
  color: #fff;
  padding-left: 10px;
}
.overlay p a{
  font-size: 2rem;
  color: #fff;
  position: relative;
  font-weight: 500;
}
.overlay p a::before{
  content: "";
  position: absolute;
  bottom: -2.5px;
  width: 100%;
  background-color: #fff;
  height: 1.5px;
  transition: all ease 0.5s;
}
.overlay p a:hover::before{
  height: 3.5px;
  animation: underline 1s linear;
}
@keyframes underline {
  from{
    width: 0;
  }
  to{
    width: 100%;
  }
}
.overlay{
  display: flex;
  z-index: 1;
  flex-direction: column;
  background-color: var(--primaryColor);
  justify-content: center;
  padding:25px;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 50%;
  opacity: 0;
}
.project:hover .overlay{
  display: flex;
  opacity: 0.9;
}
.allProjectsLink{
  display: flex;
  justify-content: center;
  align-items: center;
}
.allProjectsLink a{
  font-size: 3.3rem;
  color: var(--icon-color);
  position: relative;
}
.allProjectsLink a:before{
  content: "";
  position: absolute;
  bottom: -2.5px;
  height: 5px;
  background-color: var(--icon-color);
  width: 100%;
  border-radius: 50px;
}
.allProjectsLink a:hover::before{
  animation: underline 1s linear;
}
.allProjectsLink a i{
  color: var(--icon-color);
}
@media screen and (max-width:1200px) {
  .allProjects{
    grid-template-columns: 1fr;
    row-gap: 50px;
  }
  .projects-Box1 .headingText, .primaryColor{
    font-size: 4rem;
  }
  .projects-Box1 .headingText, .transparentText{
    font-size: 4rem;
  }
  .overlay p{
    font-size: 2.5rem;
  }
}
/* contact  section*/
.contact{
  border-top-left-radius:25px;
  width:90%;
  margin: 0 auto 0 auto;
  padding:35px 25px 35px 25px;
  background-color: rgba(245, 245, 245, 1);
  border-bottom:5px solid var(--primaryColor);
}
.formTitle{
  text-align: center;
  font-size: 3.3rem;
  color: var(--primaryColor);
}
form{
  display: flex;
  flex-direction: column;
  align-items: center;
}
.form-fields{
  display: table;
  width: 100%;
  padding: 15px 5px 5px 5px;
}
.form-fields input,
.form-fields textarea{
  color: rgba(100, 100, 100, 1);
  font-weight: 500;
  border: none;
  outline:none;
  background: none;
  font-size: 2rem;
  padding: 20px 10px 20px 10px;
  width:100%
}
.form-fields textarea{
  height: 150px;
  resize: none;
}
.form-group{
  width: 45%;
  float: left;
  padding: 0px 30px;
  margin: 14px 12px;
  border-radius: 25px;
  box-shadow: inset 8px 8px 8px #cbcbcb, inset -8px -8px 8px #fff;
}
.form-fields .form-group:last-child {
  width: 92%;
}
.submitBtn{
  width: 35%;
  height: 75px;
  border-radius: 30px;
  font-size: 2rem;
  outline: none;
  border:none;
  cursor: pointer;
  color:#fff;
  text-align: center;
  background: var(--primaryColor);
  box-shadow: 5px 5px 10px #b1b1b1, -5px -5px 10px #fff;
  transition: 0.5s;
}
@media screen and (max-width: 1200px) {
  .contact{
    width: 100%;
    height: inherit;
    float: none;  
  }
  .form-group{
    width: 100%;
    margin: 25px 0px;
  }
  .form-fields .form-group:last-child, 
  .submitBtn{
    width: 100%;
  }
}

/* footer section */
footer{
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  gap: 25px;
  padding: 25px 0;
  background-size: cover;
}
footer ul li{
  display: flex;
  gap: 10px;
}
.copyright{
  font-size: 1.5rem;
}


/* darkmode */
.darkMode{
  --background-color:#000;
  --icon-color:#fff;
  --primaryColor: #27AE60;
  --text-color: rgba(100, 100, 100, 1);
}
#darkModeBtn{
  background-color: transparent;
  border: none;
    font-size: 3.3rem;
    cursor: pointer;
    color: var(--icon-color);
  }
  @media screen and (max-width:500px){
    :root{
      --font-size: 8px;
    }
  }

